@@ -9,6 +9,7 @@
   [#49447] Example code for uart_putchar() has error in recursive call
   strings for storage in program memory
   [#50439] avr/iom32u4.h does not define PRTIM4
+  [no-id] util/eu_dst.h: fix reversed DST decision logic for March and October
 
 * New devices supported:
 
